fix(header) No wiggle on mobile

--- a/site/web/app/themes/sage/assets/styles/layouts/_header.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_header.scss
@@ -157,7 +157,7 @@ button.navbar-toggler .navbar-toggler-icon {
     display: block;
     text-align: center;
     margin:0px;
-    padding: 5px 0;
+    padding: 5px 0 !important;
   }
 
   .navbar {
